@@ -1,3 +1,5 @@
+	* fixed GrGetColorByName return value
+	* added XMapSubwindows for xpilot
 	* added XKeycodeToKeysym
 Version 0.44 - 30 May 2002 - greg@censoft.com
 	* return XKeyEvent.keycode as scancode (must be < 256 for FLTK)
